<resources>
    <string name="app_name">SchoolChecker</string>
    <string name="text_name">Ex_name</string>
    <string name="start">Начать тест</string>
    <string name="Name">Имя</string>
    <string name="Sec_name">Фамилия</string>
    <string name="School">Школа(номер/название)</string>
    <string name="Clas_s">Класс(номер, буква)</string>
    <string name="or">или</string>
    <string name="Log_in">Вход для учителя</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="Hint">Нажмиете на кнопку с правилным вариантом ответа</string>
    <string name="TextInRec">Устонавить вопросы из приложения</string>
    <string name="cancel_rus">Отмена</string>
    <string name="num_of_ans">Номер правильного ответа (цифрой)</string>
    <string name="vari4">Четвёртый вариант ответа</string>
    <string name="vari3">Третий вариант ответа</string>
    <string name="vari2">Второй вариант ответа</string>
    <string name="vari1">Первый вариант ответа</string>
    <string name="q">Вопрос</string>
    <string name="Hint_for_cheater">Нажмите на вопрос, чтобы изменить его</string>
    <string name="add_q">Добавить вопрос</string>
    <string name="hint">\t Здраствуйте! Стандартные логин и пароль - \'test@test.ru\' и \'test\'. Чтобы их изменить, нажмите на кнопку регистрация</string>
    <string name="log_up">Зарегистрироваться</string>
    <string name="end">Вернутся к заводским настройкам</string>
    <string name="Login_text">Логин</string>
    <string name="Failed_login">Пароль или логин неверный!</string>
    <string name="EmptyErorr">Заполните все поля!</string>
    <string name="QLoaded">Это первый запуск. Стандартные вопросы загружены</string>
    <string name="EroorrNumOfAns">Ответом должна быть цифра от 1 до 4!</string>
    <string name="ErorrMinQ">Вопрос невозможно удалить, так как в списке минимальное количество вопросов!</string>
    <string name="QDeleted">Вопрос удалён!</string>
    <string name="ErorrNonSamePasswords">Новые пароли не совпадают!</string>
</resources>
