<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    >


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/sec_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Sec_name" />


    <EditText
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/School" />

    <EditText
        android:id="@+id/clas_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Clas_s"
        android:inputType="text" />

    <Button
        android:id="@+id/var3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/forText"
        android:textSize="18sp"
        android:layout_gravity="start"

        />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="73dp" />



    <EditText
        android:id="@+id/login_for_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Login_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_for_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Log_in"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/forText"
        android:textSize="16sp"
        android:layout_gravity="start"
        />

    <Button
        android:id="@+id/log_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/forText"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:text="@string/log_up"/>

    <TextView
        android:id="@+id/hint_for_cheater"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/hint"
        android:textColor="@color/forDarkText"
        android:visibility="invisible"/>


</LinearLayout>